[package]
name = "creator"
version = "0.1.0"
edition = "2021"

[lib]
name = "creator"
path = "src/lib.rs"

[[bin]]
name = "creator"
path = "src/main.rs"

[dependencies]
os_info = "3.7.0"
slint = "1.3.2"
tracing = "0.1.27"
tracing-subscriber = "0.3.18"
tracing-log = "0.2.0"
log = "0.4.14"
tokio = "1.35.0"
egui = "0.24.0"
[lints.rust]
unsafe_code = "forbid"
